# shukatsu-mail-copilot

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md
docs/images/: README.md
examples/: sample_mail.txt
scripts/: run_local.sh  run_mailbox.sh
src/shukatsu_mail_copilot/: __init__.py  __main__.py  pipeline.py
tests/: test_extract_fixture.py  test_normalization.py
